Se agregaron los componentes

--- a/Bibliografia/bibliografia.tex
+++ b/Bibliografia/bibliografia.tex
@@ -12,6 +12,8 @@
 
 \bibitem{} Gallegos, G. (2017, 20 octubre). Para que es Webpack? Medium. https://medium.com/tecninja/porque-usar-webpack-4a5004094455
 
+\bibitem{CRA} Getting Started | Create React App. (s. f.). Create React App. https://create-react-app.dev/docs/getting-started/
+
 \bibitem{} Hudson, P. (2016). Hacking with REACT [Libro electrónico]. http://www.hackingwithREACT.com/
 
 \bibitem{} JAVASCRIPT. (2020, 11 agosto). Documentación web de MDN. https://developer.mozilla.org/es/docs/Web/JAVASCRIPT
